--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "gsap": "file:gsap-bonus.tgz",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-gsap": "^2.2.1",
+    "react-lottie": "^1.2.3",
+    "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-spinners": "^0.9.0"
