--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.13.1",
     "react-gsap": "^2.2.1",
     "react-lottie": "^1.2.3",
+    "react-paginate": "^6.5.0",
     "react-pagination-js": "^2.0.0",
     "react-particles-js": "^3.3.0",
     "react-router-dom": "^5.2.0",
