--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
     "react-spinners": "^0.9.0",
+    "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
