--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "formik": "^2.1.7",
     "gsap": "file:gsap-bonus.tgz",
+    "moment": "^2.29.1",
     "qs": "^6.9.4",
     "query-string": "^6.13.5",
     "react": "^16.13.1",
